Ingress_Http/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  ingressClassName: nginx

  # use our deployed secret to ensure TLS so we can use HTTPS
  tls:
  - hosts:
    - rocky9-server2.nip.io
    secretName: tls-secret

  rules:
  - host: rocky9-server2.nip.io # we will fake the HOST headers to replicate this domain locally
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          # what service are we routing to?
          service:
            name: test-service # match the name of your service
            port: 
              number: 80 # what port on this service?
